<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.signup.SignupFragment">

    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="50dp">



        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textSize="32sp"
            android:text="@string/signup_title"
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance.Material.Large" />

        <EditText
            style="@style/EditView"
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_name"
            android:layout_marginTop="40dp"
            android:hint="@string/name"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <EditText
            style="@style/EditView"
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_email"
            android:layout_marginTop="20dp"
            android:hint="@string/email"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/edit_password"
            style="@style/EditView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawableEnd="@drawable/ic_eye"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_button"
            android:layout_marginTop="30dp"
            android:textColor="@color/white"
            android:textFontWeight="700"
            android:textSize="20sp"
            android:backgroundTint="@color/orange"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

