<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.amigoanimal.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <!-- Ação para navegar para o DetailFragment -->
        <action
            android:id="@+id/action_nav_home_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.amigoanimal.ui.create.CreateFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_create" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.amigoanimal.ui.signup.SignupFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_signup" />

    <fragment
        android:id="@+id/detailFragment"
        android:name="com.example.amigoanimal.ui.detailAdoption.DetailFragment"
        android:label="Detalhes"
        tools:layout="@layout/fragment_detail">

        <action
            android:id="@+id/action_nav_detail_to_homeFragment"
            app:destination="@id/nav_home" />

        <action
            android:id="@+id/action_nav_detail_to_editFragment"
            app:destination="@id/editFragment" />
    </fragment>

    <fragment
        android:id="@+id/editFragment"
        android:name="com.example.amigoanimal.ui.edit.EditFragment"
        android:label="Editar"
        tools:layout="@layout/fragment_edit">
    </fragment>
</navigation>
