<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.create.CreateFragment" >

    <TextView
        android:id="@+id/edit_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:hint="Editar cadastro"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_marginTop="42dp"
        android:ems="13"
        android:inputType="text"
        android:hint="@string/create_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_title" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_marginTop="21dp"
        android:ems="13"
        android:inputType="textEmailAddress"
        android:hint="@string/create_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editName" />

    <EditText
        android:id="@+id/editPhone"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_marginTop="21dp"
        android:ems="13"
        android:inputType="phone"
        android:hint="@string/create_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editEmail" />

    <EditText
        android:id="@+id/editLocalizaoAdotante"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_marginTop="21dp"
        android:ems="13"
        android:hint="Localização do adotante"
        android:inputType="textPostalAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPhone" />

    <TextView
        android:id="@+id/textAdoptionDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:text="@string/create_date"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editLocalizaoAdotante" />

    <EditText
        android:id="@+id/editAdoptionDate"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:ems="13"
        android:hint="@string/create_date"
        android:inputType="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAdoptionDate" />

    <EditText
        android:id="@+id/editNomeAnimal"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_marginTop="21dp"
        android:ems="13"
        android:hint="Nome do animal"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editAdoptionDate" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutIdade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNomeAnimal">

        <TextView
            android:id="@+id/textIdade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Idade do Animal:"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroupIdade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="21dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

            <RadioButton
                android:id="@+id/radioButtonFilhote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Filhote" />

            <RadioButton
                android:id="@+id/radioButtonJovem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Jovem" />

            <RadioButton
                android:id="@+id/radioButtonAdulto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Adulto" />
        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutType"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="21dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayoutIdade">

        <Switch
            android:id="@+id/animalType"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/create_animalTypeDog"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/createTypeCat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_animalTypeCat"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/animalType"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutSexo"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="21dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayoutType">

        <Switch
            android:id="@+id/sexoAnimal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Macho"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/createSexo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Fêmea"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/sexoAnimal"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/editAnimalData"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="21dp"
        android:ems="13"
        android:hint="@string/create_animalData"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayoutSexo" />

    <Button
        android:id="@+id/button_addImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:textSize="20sp"
        android:text="@string/button_addImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editAnimalData" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:id="@+id/scrollImages"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_addImage">

        <LinearLayout
            android:id="@+id/create_images"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp" />
    </HorizontalScrollView>

    <Button
        android:id="@+id/button_addDocuments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:text="@string/button_addDocument"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollImages" />

    <HorizontalScrollView
        android:id="@+id/scrollDocuments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@+id/button_addDocuments">

        <LinearLayout
            android:id="@+id/create_documents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp" />
    </HorizontalScrollView>

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:textSize="20sp"
        android:text="Editar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollDocuments" />


</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>